# rfq2boq

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  HIERARCHY.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: Dependabot.yml
archive/: README.md
config/: FROZEN_HASHES.sha256  __init__.py  constants.py  settings.py
data/: conflict_ground_truth.json  construction_kb.json  nerAnnotations.json
deliverables/: EXECUTIVE_SUMMARY.md  Internship_Project_Report.docx  Internship_Project_Report.md  PROJECT_CLOSEOUT_HANDOFF.md  README.md  SWA_HANDOFF_GUIDE.md  TIMELINE_AND_OBJECTIVES.html  demo_live.py  generate_docx.py
deployment/: .env.example  Dockerfile  docker-compose.yml
docs/: ANNOTATION_FACTORY_PATCH.md  ANNOTATION_GUIDELINES.md  ANNOTATION_WORKFLOW.md  CORE_UNDERSTANDING.md  CORPUS_DEFINITION.md  GOLD_METHODOLOGY.md  HYBRID_EXECUTION_PLAN.md  HYBRID_PLAN.md  INTAKE_PROTOCOL.md  ONBOARDING.md  SCOPE_GUARD.md  STRATEGIC_REVIEW.md  SWA_REQUIREMENTS_2026-06-11.md  USER_GUIDE.md  api.md  arcbert.md  architecture.md  conflict_resolution.md  conventions.md  data_collection.md  demo_video_script.md  deployment.md  excel_format.md  handover_verification_report.md  hindi_support.md  indicbert.md  model_card.md  omniclass_mapping.md  operations.md  orchestration.md  rates_dsr.md  ui_guide.md  wave_status.md
prompts/: DISPATCH_NOW.md  EXAMPLE_FILLED_TASK.md  INDEX.md  TASK_TEMPLATE.md
resources/: COMPLETE_PDF_CONTENTS.md  PUBLISH PRODUCT.xlsx  RESOURCES_GUIDE.md  VIDEO_TRANSCRIPTS.md  meeting requirments  ner_training_data.py
results/: BOQ_sample_simple.json  PRODUCT_EVAL.md  arcbert_ner_eval.json  arcbert_vs_baseline.json  boq_extraction.json  boq_output.xlsx  conflict_resolution_eval.json  final_model_eval.json  frozen_test_files.json  handover_metrics.json  ner_metrics.json  real_only_eval.json  real_world_metrics.json  real_world_metrics_v2.json  rfq_boq.xlsx  rfq_extraction.json  rule_based_ner_metrics.json  sample_rfq_results.json  simple_extraction.json  source_truth_review.md
schema/: boq.v1.json
scripts/: README.md  annotate_all_real.py  annotate_data.py  annotate_gold.py  annotate_rfq.py  annotation_factory.py  audit_fidelity_per_doc.py  batch_extract_all_26.py  batch_process_pdfs.py  bootstrap_gold_drafts.py  demo.py  (+82 more)
(+1768 files in other folders)
