[project]
name = "rfq2boq"
version = "0.1.0"
description = "RFQ to BOQ Scope Extraction using NLP"
license = {text = "MIT"}
requires-python = ">=3.11,<3.14"
authors = [
    {name = "Srujan Karna"},
]

dependencies = [
    # PDF Processing
    "pdfplumber>=0.10.0",
    "camelot-py>=1.0.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
    "Pillow>=10.0",

    # NLP / ML
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "spacy>=3.7.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "seqeval>=0.0.19",
    "accelerate>=0.24.0",

    # Ontology
    "rdflib>=7.0.0",
    "PyYAML>=6.0",

    # Domain
    "pydantic>=2.5",
    "pydantic-settings>=2.1",

    # Output
    "openpyxl>=3.1.0",

    # API
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "python-multipart>=0.0.6",

    # LLM Providers
    "anthropic>=0.25.0",
    "openai>=1.10.0",

    # UI
    "streamlit>=1.28",

    # CLI
    "typer>=0.9",
    "rich>=13.0",

    # Utilities
    "tqdm>=4.65.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.3.0",
    "httpx>=0.25",
    "ruff>=0.4",
    "mypy>=1.7",
    "pre-commit>=3.5",
]
ocr-gpu = [
    "paddleocr>=2.7",
    "paddlepaddle>=2.5",
]

[project.scripts]
rfq2boq = "src.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "config", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B023", "N802", "N803", "N806", "E741"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ""
timeout = 120
timeout_method = "thread"
asyncio_mode = "auto"
markers = [
    "slow: slow tests (run with --slow)",
]

[tool.coverage.run]
source = ["src", "config"]
omit = [
    "src/cli/*",
    "src/nlp/ner/inference.py",
    "src/nlp/ner/trainer.py",
    "src/api/routes/upload.py",
    "src/api/routes/review.py",
    "*/__init__.py",
    "*/migrations/*",
]
